# nutribot

./: .env.example  .env.prod.example  .gitignore  Caddyfile  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  crontab  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2297819147f0_onboarding_and_legal_consent.py  4ac58f53933c_login_codes.py  a1b2c3d4e5f6_reminders.py  b2c3d4e5f6a7_inactivity_nudge.py  b87f9d5bda94_initial_schema.py  c3d4e5f6a7b8_reminder_news_type.py  c7e991423b5a_add_onboarding_step_to_users.py  d1a2b3c4e5f6_diet_plan_and_user_notes.py  e2b3c4d5f6a7_diet_plan_concrete_dates.py  f3a4b5c6d7e8_fiber_and_water.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  app_settings.py  conversation.py  diet_plan.py  enums.py  food_cache.py  knowledge.py  (+10 more)
backend/sample_docs/: hidratacion.md  indice_glucemico.md  proteina.md
backend/scripts/: create_admin.py  load_sample_docs.py  migrate_meals_to_diet.py  send_reminders.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chunking.py  test_diet_plan.py  test_format.py  test_hallucination_guard.py  test_inactivity.py  test_leaked_tools.py  test_nutrition.py  test_nutrition_news.py  test_onboarding.py  test_openfoodfacts.py  test_preferences.py  test_profile.py  test_reminders.py  test_retrieval.py
bot/: Dockerfile  backend_client.py  config.py  main.py  pyproject.toml  render.py
bot/handlers/: chat.py  commands.py
(+85 files in other folders)
