[project]
name = "nutribot-backend"
version = "0.1.0"
description = "NutriBot backend API (FastAPI + SQLAlchemy async + pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "openai>=1.54",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "fpdf2>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
