[project]
name = "nutribot-bot"
version = "0.1.0"
description = "NutriBot Telegram bot (polling) that relays messages to the backend"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.6",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
]

[tool.uv]
# Run as a plain script; no need to build/install this project as a package.
package = false
